# automodel

./: Cargo.toml  LICENSE  MODULES_EXAMPLE.md  README.md  README.old.md  test_invalid.yaml  test_schema.sql
automodel-cli/: Cargo.toml  README.md
automodel-cli/src/: main.rs
automodel-lib/: Cargo.toml
automodel-lib/src/: build_helper.rs  builder.rs  code_generation.rs  codegen.rs  config.rs  db_connection.rs  lib.rs  query_config.rs  query_definition.rs  query_definition_rt.rs  sqlfile_parser.rs  sqlparser.rs  type_extraction.rs  types_extractor.rs  utils.rs  yaml_parser.rs
automodel-lib/src/codegen/: mod.rs  module_generator.rs  types_generator.rs
automodel-lib/tests/: integration_tests.rs
example-app/: Cargo.toml  build.rs  queries.yaml  schema.sql
example-app/migrations/: 000_add_user.sql  001_add_age_indexes.sql  002_add_posts_and_comments.sql  003_add_all_types_table.sql
example-app/queries-debug/debug_batch_insert_constraints/: 05_insert_users_batch.sql
example-app/queries/admin/: 01_get_current_time.sql  02_get_version.sql  28_insert_all_types_test.sql  29_get_all_types_test.sql
example-app/queries/analytics/: 22_get_user_activity_summary.sql  23_get_hierarchical_user_data.sql  24_get_user_activity_with_posts.sql  25_get_user_engagement_metrics.sql  26_get_time_series_user_registrations.sql  27_get_users_with_timezone_info.sql  40_get_user_count_and_avg_age.sql
example-app/queries/setup/: 03_create_users_table.sql
example-app/queries/user_model/: 42_create_user.sql  43_update_user_full.sql  44_update_user_partial.sql  45_find_user_by_email.sql
example-app/queries/users/: 04_insert_user.sql  05_insert_users_batch.sql  06_get_all_users.sql  07_find_user_by_email.sql  08_update_user_profile.sql  09_find_users_by_name_and_age.sql  10_get_recent_users.sql  11_get_active_users_by_age_range.sql  12_search_users_by_name_pattern.sql  13_search_users_advanced.sql  14_get_users_by_status.sql  15_update_user_status.sql  16_update_user_fields.sql  17_update_user_fields_diff.sql  18_insert_user_structured.sql  19_get_all_user_statuses.sql  20_get_all_users_with_star.sql  21_get_user_by_id_with_star.sql  30_get_user_by_id_and_email.sql  31_delete_user_by_id_and_email.sql  32_update_user_contact_info.sql  33_update_user_profile_diff.sql  34_update_user_metadata_diff.sql  35_get_user_summary.sql  36_get_user_info_by_email.sql  37_get_all_user_summaries.sql  38_get_user_details.sql  39_search_user_details.sql  41_find_user_by_criteria.sql  46_get_user_simple.sql  46_test_custom_derives.sql  47_get_user_id_only.sql  48_get_user_id_raw.sql
example-app/src/: generated.rs  main.rs  models.rs
examples/: basic_usage.rs  sample_generated.rs  schema.sql  user_queries.yaml
