[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true }
tokio-postgres = { workspace = true, features = [
    "with-chrono-0_4",
    "with-serde_json-1",
] }
postgres-types = { version = "0.2", features = ["derive", "with-serde_json-1"] }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
rust_decimal = { workspace = true, features = ["db-tokio-postgres"] }
bytes = "1.0"

[build-dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
