[package]
name = "example-app"
version = "0.1.0"
edition = "2021"

[dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
rust_decimal = { workspace = true, features = ["db-postgres", "serde"] }

[build-dependencies]
automodel = { path = "../automodel-lib" }
tokio = { workspace = true, features = ["rt"] }
anyhow = { workspace = true }
